--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -60,7 +60,7 @@
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Label>
-                        <ComboBox fx:id="cmbRagioneSociale" prefWidth="150.0" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                        <ComboBox fx:id="cmbRagioneSociale" prefWidth="150.0" promptText="Ragione Sociale" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
                         <Label text="seleziona periodo" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                            <font>
                               <Font name="System Bold" size="12.0" />
@@ -114,7 +114,7 @@
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Label>
-                        <ComboBox fx:id="cmbDescrizione" onAction="#associaTrasportatori" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+                        <ComboBox fx:id="cmbDescrizione" onAction="#associaTrasportatori" prefWidth="160.0" promptText="Descrizione Europea1" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
                      </children>
                   </GridPane>
                   <Label text="Inserisci i mezzi di trasporto per ogni ragione sociale Trasportatore. Seleziona una ragione sociale Trasportatore, digita la relativa quantità e capienza. Per confermare premi il pulsante AGGIUNGI. Se desideri cambiare i dati inseriti seleziona una ragione sociale Trasportatore e premi il pulsante RESETTA successivamente ripeti il procedimento." textAlignment="CENTER" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="2">
@@ -136,7 +136,7 @@
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Label>
-                        <ComboBox fx:id="cmbTrasportatore" prefWidth="150.0" GridPane.columnIndex="1" />
+                        <ComboBox fx:id="cmbTrasportatore" prefWidth="160.0" promptText="R.S. Trasportatore" GridPane.columnIndex="1" />
                      </children>
                   </GridPane>
                   <GridPane GridPane.rowIndex="4">
